style(page-app-header): fix z-index

--- a/src/features/templates/PageAppHeader/page-app-header.styles.scss
+++ b/src/features/templates/PageAppHeader/page-app-header.styles.scss
@@ -34,7 +34,6 @@
     background-color: $color-brand-1;
     $radius-size: 24px;
     margin-bottom: $radius-size * -1;
-    z-index: 1;
     position: relative;
     &::after {
       display: block;
